tests/NormalTests/paczka1/small_fuzzy/74147645.err
Error in line 5: pcYXx7Y A170 58,2
Error in line 14: A11 A11 53,13
